--- a/app/views/best_contributor/_show.html.erb
+++ b/app/views/best_contributor/_show.html.erb
@@ -1,5 +1,5 @@
 <div>
   <%= image_tag user.avatar, width: 30, class: 'img-rounded' %>
-  <%= user.name %>
+  <%= link_to user.name, user_path(user.id), method: :get %>
   <%= user.point %>
 </div>
