done update for budget

--- a/app/views/users/_user_with_budgets.html.erb
+++ b/app/views/users/_user_with_budgets.html.erb
@@ -15,11 +15,11 @@
 
       <div class="budget-row">
         <div class="col-md-6">
-          <strong>Total</strong>
+          <strong style="color: #983F3E; font-size: 30px">Total</strong>
         </div>
 
         <div class="col-md-6">
-          <strong><%= format_price(user.total_amount_to_pay) %></strong>
+          <strong style="color: #983F3E; font-size: 30px"><%= format_price(user.total_amount_to_pay) %></strong>
         </div>
       </div>
     </div>
