--- a/app/views/budget_items/_budget_plan_form.html.erb
+++ b/app/views/budget_items/_budget_plan_form.html.erb
@@ -4,7 +4,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" id="budget_update_close_btn<%= budget_item.id %>"
+                data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <h3 class="modal-title" id="budgetPlanItemLabel">Edit Expense Item</h3>
@@ -17,7 +18,6 @@
                    name="budget_item[name]" placeholder="Name">
           </div>
 
-          <input type="hidden" value="<%= budget_item.budget_section_id %>" name="budget_item[budget_section_id]">
           <input type="hidden" value="<%= @trip.id %>" name="trip_id">
 
           <div class="form-group">
@@ -36,9 +36,9 @@
                    value="<%= budget_item.price %>"
                    name="budget_item[price]" placeholder="Item">
           </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-success"
-                    style="margin-bottom: 8px; margin-top: 16px; width: 50%">Save</button>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success" id="budget_update_btn<%= budget_item.id %>"
+                    style="margin-bottom: 8px; margin-top: 16px; width: 100%">Save</button>
           </div>
       <% end %>
     </div>
