--- a/app/views/trips/_budget_plan_edit.html.erb
+++ b/app/views/trips/_budget_plan_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade trip-form" id="budget-plan-item-form" tabindex="-1" role="dialog" aria-labelledby="budgetPlanItemLabel"
+<div class="modal fade budget-plan-edit-form" id="budget-plan-item-form" tabindex="-1" role="dialog" aria-labelledby="budgetPlanItemLabel"
      aria-hidden="true" xmlns="http://www.w3.org/1999/html">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -8,8 +8,6 @@
         </button>
         <h3 class="modal-title" id="budgetPlanItemLabel">Edit Expense Item</h3>
       </div>
-
-
             <form class="form-horizontal form-card">
             <div class="form-group">
               <label for="item" class="control-label">Item:</label>
