--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -756,7 +756,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     }
   }
 }
-#budget-plan-item-form{
+.budget-plan-edit-form{
   .modal-header{
     background-color: #983F3E;
     color: #fff;
@@ -805,4 +805,78 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     margin-right: 8px;
   }
 }
-
+.trip-display{
+  float: left;
+  width: 100%;
+  margin-bottom: 100px;
+}
+.trip-basic-info-display{
+  text-align: center;
+  padding: 16px;
+  .trip-title{
+    font-size: 50px;
+    color: #943e2d;
+  }
+  span{
+    padding: 8px;
+  }
+  .trip-destination{
+    font-size: 24px;
+    color: #333333;
+    border-bottom: 1px dashed #730E15;
+  }
+.trip-time{
+  display: block;
+  font-size: 24px;
+}
+  .trip-participant-list{
+    font-size: 20px;
+    img{
+      width: 30px;
+      height: 30px;
+    }
+  }
+  .trip-description{
+    font-size: 20px;
+    margin-top: 8px;
+    display: inline-block;
+    text-align: justify;
+    width: 700px;
+    color: #777;
+  }
+}
+.trip-itinerary-display{
+  text-align: center;
+  background-color: rgba(191, 170, 63, 0.1);
+  padding: 8px 0 16px 0;
+}
+.trip-budget-display{
+  width: 100%;
+  text-align: center;
+  float: left;
+  .budget-plan-table {
+    width: 60%;
+    font-size: 20px;
+    margin: 0 auto;
+    float: none;
+  }
+  .total-budget{
+    text-align: center;
+  }
+}
+.fix-btn-bar{
+  float: left;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  z-index: 9999;
+  background-color: #F9F7EC;
+  text-align: center;
+  padding: 16px;
+  .btn-success{
+    font-size: 24px;
+  }
+  .glyphicon{
+    margin-right: 3px;
+  }
+}
