--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -19,6 +19,11 @@
                       id: 'deleteDayBtn', remote: true, method: :delete do %>
               <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Day
           <% end %>
+          <script>
+            $('.delete-day-btn').click(function () {
+              showLoading();
+            })
+          </script>
         </div>
       </div>
     </div>
