--- a/app/views/budget_items/_budget_item.html.erb
+++ b/app/views/budget_items/_budget_item.html.erb
@@ -6,7 +6,7 @@
     <%= budget_item.assignee %>
   </div>
   <div class="col-md-3">
-    <%= budget_item.price %>
+    <%= format_price(budget_item.price) %>
   </div>
   <div class="col-md-3 budget-plan-item-action">
     <a href="#" data-toggle="modal" data-target="#budget_item_form<%= budget_item.id %>">
