--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -100,6 +100,7 @@
       },
       {
         name: 'states',
+        limit: 7,
         source: placeEngine,
         display: 'name',
         templates: {
