--- a/app/views/trips/_gallery.html.erb
+++ b/app/views/trips/_gallery.html.erb
@@ -1,6 +1,7 @@
 <h2 class="fs-title short-border">Gallery</h2>
 <span class="btn-behind-title">
-  <a href="#" class="import-facebook-album" data-toggle="modal" data-target="#importFBAlbumModal">Import album from Facebook</a>
+  <a href="#" class="import-facebook-album" data-toggle="modal" data-target="#importFBAlbumModal">Import album from
+    Facebook</a>
 </span>
 <div class="attachment-container">
   <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
@@ -39,22 +40,9 @@
   </div>
 
   <div id="photos-place">
-    <a href="http://images.nationalgeographic.com/wpf/media-live/photos/000/714/overrides/ho-chi-minh-city-vietnam_71471_990x742.jpg" title="Banana" data-gallery>
-      <img src="http://images.nationalgeographic.com/wpf/media-live/photos/000/714/overrides/ho-chi-minh-city-vietnam_71471_990x742.jpg" alt="Banana">
-    </a>
-    <a href="http://cache1.asset-cache.net/gc/523959663-sunrise-over-ho-chi-minh-city-gettyimages.jpg?v=1&c=IWSAsset&k=2&d=21zqa0CogSjKAyX7FkEw6LrGEseUti1Miq926hUnniodYh4KDlVbnhbTmY1hH%2Fed4KLZNeQbNGkFImowLsMbOw%3D%3D" title="Apple" data-gallery>
-      <img src="http://cache1.asset-cache.net/gc/523959663-sunrise-over-ho-chi-minh-city-gettyimages.jpg?v=1&c=IWSAsset&k=2&d=21zqa0CogSjKAyX7FkEw6LrGEseUti1Miq926hUnniodYh4KDlVbnhbTmY1hH%2Fed4KLZNeQbNGkFImowLsMbOw%3D%3D" alt="Apple">
-    </a>
-    <a href="http://www.photoweeklyonline.com/wp-content/uploads/2011/12/Ho_Chi_Minh_Traffic.jpg" title="Orange" data-gallery>
-      <img src="http://www.photoweeklyonline.com/wp-content/uploads/2011/12/Ho_Chi_Minh_Traffic.jpg" alt="Orange">
-    </a>
-    <a href="http://www.abdphoto.net/gallery/wedding/saigon-notre-dame.jpg" title="Apple" data-gallery>
-      <img src="http://www.abdphoto.net/gallery/wedding/saigon-notre-dame.jpg" alt="Apple">
-    </a>
+    <%= render partial: 'attachments/photo', collection: @photos, as: :photo %>
   </div>
 </div>
-
-
 
 <!-- Modal -->
 <div class="modal fade" id="importFBAlbumModal" role="dialog">
@@ -67,7 +55,7 @@
         <h3 class="modal-title">Import Album from Facebook</h3>
       </div>
       <div class="modal-body">
-        <h2>Vu Huy Quan's Albums</h2>
+        <h2>Your Albums</h2>
         <table class="table table-striped facebook-album-list">
           <thead>
           <tr>
@@ -77,14 +65,8 @@
             <th>&nbsp;</th>
           </tr>
           </thead>
-          <tbody>
-          <tr>
-            <td>Ha Noi Trips</td>
-            <td>15 Feb 2016</td>
-            <td>20</td>
-            <td><a href="#" class="btn btn-primary">Select</a></td>
-          </tr>
-
+          <tbody id="gallery_body">
+            <%= render partial: 'attachments/attachment', collection: @albums, as: :album %>
           </tbody>
         </table>
       </div>
@@ -96,6 +78,9 @@
   </div>
 </div>
 <div class="foot-nav">
-  <button type="button" name="previous" class="btn previous nav-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous</button>
-  <button type="button" name="next" class="btn btn-success btn-publish-trip">Submit <span class="glyphicon glyphicon-share" aria-hidden="true"></span></button>
+  <button type="button" name="previous" class="btn previous nav-button">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous
+  </button>
+  <button type="button" name="next" class="btn btn-success btn-publish-trip">Submit
+    <span class="glyphicon glyphicon-share" aria-hidden="true"></span></button>
 </div>
