--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,10 @@
         <!-- HEADER VIEW -->
         <div class="trip-top-header">
           <div class="container">
+            <a href="<%= root_path %>">
             <h1>WE TRIP</h1>
             <span class="slogan">Travel in your way</span>
+            </a>
             <div class="top-right-trip">
               <%= render 'share/login_user_menu' %>
             </div>
