--- a/app/views/trips/_gallery.html.erb
+++ b/app/views/trips/_gallery.html.erb
@@ -1,7 +1,8 @@
 <h2 class="fs-title short-border">Gallery</h2>
 <span class="btn-behind-title">
-  <a href="#" class="import-facebook-album" data-toggle="modal" data-target="#importFBAlbumModal">Import album from
-    Facebook</a>
+  <a href="#" class="import-facebook-album" data-toggle="modal" data-target="#importFBAlbumModal">
+    Import album from Facebook
+  </a>
 </span>
 <div class="attachment-container">
   <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
@@ -52,21 +53,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h3 class="modal-title">Import Album from Facebook</h3>
+        <h3 class="modal-title">Import album from Facebook</h3>
       </div>
       <div class="modal-body">
         <h2>Your Albums</h2>
         <table class="table table-striped facebook-album-list">
           <thead>
           <tr>
-            <th>Album Name</th>
-            <th>Created Date</th>
-            <th>Number of Photos</th>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Photos</th>
             <th>&nbsp;</th>
           </tr>
           </thead>
           <tbody id="gallery_body">
-            <%= render partial: 'attachments/attachment', collection: @albums, as: :album %>
+          <%= render partial: 'attachments/attachment', collection: @albums, as: :album if @albums %>
           </tbody>
         </table>
       </div>
@@ -81,6 +82,7 @@
   <button type="button" name="previous" class="btn previous nav-button">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous
   </button>
-  <button type="button" name="next" class="btn btn-success btn-publish-trip">Submit
-    <span class="glyphicon glyphicon-share" aria-hidden="true"></span></button>
+  <button type="button" name="next" class="btn btn-success btn-publish-trip">
+    Publish <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+  </button>
 </div>
