--- a/app/views/trips/_gallery.html.erb
+++ b/app/views/trips/_gallery.html.erb
@@ -78,11 +78,13 @@
 
   </div>
 </div>
+
+<!-- Action publish -->
 <div class="foot-nav">
   <button type="button" name="previous" class="btn previous nav-button">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous
   </button>
-  <button type="button" name="next" class="btn btn-success btn-publish-trip">
-    Publish <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
-  </button>
+  <%= link_to publish_trip_path(@trip), method: :put, name: 'next', class: 'btn btn-success btn-publish-trip' do %>
+      Publish <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+  <% end %>
 </div>
