--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,5 +1,5 @@
 <!-- multistep form -->
-<div id="msform">
+<div id="msform" data-no-turbolink>
   <!-- progressbar -->
   <ul id="progressbar">
     <li class="active">Basic Info</li>
