--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,6 +99,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   background-image: image-url('home_big.png');
   width: 1440px;
   height: 400px;
+  margin: 0 auto;
 }
 
 .header {
@@ -122,7 +123,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 }
 
 .main-search {
-  top: 65px;
+  top: 55px;
   position: relative;
   padding: 16px;
   background-color: rgba(0, 0, 0, 0.6);
@@ -1055,4 +1056,147 @@ width: 50px;
   font-size: 18px;
   display: block;
   padding: 8px;
+}
+
+/*home page*/
+.search-icon{
+  background: image-url('isearch.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  opacity: 0.5;
+  margin: 0 auto;
+}
+
+.planning-icon{
+  background: image-url('iplanning.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  opacity: 0.5;
+  margin: 0 auto;
+}
+
+.share-icon{
+  background: image-url('ishare.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  opacity: 0.5;
+  margin: 0 auto;
+}
+.site-features{
+  text-align: center;
+}
+.site-feature{
+  padding: 16px 32px;
+  h3{
+    text-align: center;
+    border-bottom: 2px solid #A51919;
+    padding: 16px;
+  }
+}
+.feature-info{
+  display: block;
+  width: 70%;
+  margin: auto;
+  p{
+    font-size: 18px;
+  }
+}
+h2.home-info{
+  text-align: center;
+  color: #A51919;
+}
+
+.site-best-contributor{
+  width: 100%;
+  background-color: #A51919;
+  float: left;
+  padding: 16px;
+  text-align: center;
+  h2{
+    text-transform: uppercase;
+    color: #fff;
+  }
+}
+.best-contributor-carousel{
+  width: 880px;
+  margin: 16px auto;
+  .slick-slide{
+    background-color: #fff;
+    margin-right: 24px;
+  }
+  .slick-prev:before, .slick-next:before{
+    color: #fff;
+    font-size: 24px;
+  }
+  .best-contributor-photo{
+    width: 100%;
+    float: left;
+    img{
+      width: 100%;
+      height: 152px;
+      border-bottom: 1px solid #777;
+    }
+  }
+  .contributor-info{
+    width: 100%;
+    float: left;
+    text-align: center;
+    padding: 8px 0;
+  }
+  .num-contribution{
+    display: block;
+    font-size: 18px;
+    color: #A51919;
+    font-weight: bolder;
+  }
+}
+
+.site-our-team{
+  width: 100%;
+  float: left;
+  text-align: center;
+  h3{
+    text-transform: uppercase;
+    font-size: 24px;
+  }
+  .team-info{
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .site-mem{
+      padding: 16px 32px;
+
+  }
+  .mem-name{
+    display: block;
+    margin: auto;
+  }
+}
+
+.landoan-photo{
+  background: image-url('landoan-photo.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
+}
+
+.quanvu-photo{
+  background: image-url('quanvu-photo.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
+}
+
+.khanhdang-photo{
+  background: image-url('khanhdang-photo.png') no-repeat;
+  display: block;
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
 }
