cache state of editing

--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -66,10 +66,6 @@
 <% end %>
 
 <script>
-  $('#update_trip').click(function () {
-    showLoading();
-  });
-
   // datetime picker
   $('.datetimepicker').datetimepicker({
     format: 'DD-MM-YYYY'
@@ -152,4 +148,6 @@
           });
     }
   });
+
+  <% set_current_screen('basic_info') %>
 </script>
