--- a/app/views/trips/_gallery.html.erb
+++ b/app/views/trips/_gallery.html.erb
@@ -88,3 +88,7 @@
       Publish <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
   <% end %>
 </div>
+
+<script>
+  <% set_current_screen('gallery') %>
+</script>
