--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<% set_current_screen(nil )if params[:controller] != 'trips' %>
+
 <% if params[:controller] == 'home' %>
     <div class="image-search-home">
       <div class="container">
@@ -34,27 +36,24 @@
     </div>
 
     <!-- MAIN ACTION -->
-
-      <%= yield %>
-
-
+    <%= yield %>
 <% else %>
 
-        <!-- HEADER VIEW -->
-        <div class="trip-top-header">
-          <div class="container">
-            <a href="<%= root_path %>">
-            <h1>WE TRIP</h1>
-            <span class="slogan">Travel in your way</span>
-            </a>
-            <div class="top-right-trip">
-              <%= render 'share/login_user_menu' %>
-            </div>
-          </div>
+    <!-- HEADER VIEW -->
+    <div class="trip-top-header">
+      <div class="container">
+        <a href="<%= root_path %>">
+          <h1>WE TRIP</h1>
+          <span class="slogan">Travel in your way</span>
+        </a>
+        <div class="top-right-trip">
+          <%= render 'share/login_user_menu' %>
         </div>
+      </div>
+    </div>
 
-        <%= yield %>
-<% if params[:controller] == 'trips' && params[:action] == 'edit'  %>
+    <%= yield %>
+    <% if params[:controller] == 'trips' && params[:action] == 'edit' %>
         <!-- LOADING VIEW -->
         <%= render 'share/loading' %>
     <% end %>
