update styles with cropped image

--- a/app/views/trips/_trip_summary.html.erb
+++ b/app/views/trips/_trip_summary.html.erb
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-image">
       <%= link_to trip do %>
-          <img class="img-responsive" height="600" style="width: 100%" src="<%= trip.display_photo %>">
+          <img height="300" style="width: 100%" src="<%= trip.display_photo %>">
           <span class="card-title"><%= trip.title %></span>
       <% end %>
     </div>
