--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -759,6 +759,9 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     color: #fff;
     opacity: 1;
   }
+  .trip-gallery-photo-item{
+    object-fit: cover;
+  }
   .facebook-album-list {
     font-size: 18px;
     th {
@@ -929,6 +932,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   display: inline-block;
   margin: 0 auto;
   h2 {
+    display: inline-block;
     color: #900C0C;
   }
 }
@@ -975,12 +979,12 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 }
 
 .basic-info {
-  width: 400px;
+  width: 300px;
 }
 
 .horizontal-block-center {
   text-align: center;
-  padding: 16px;
+  margin-top: 16px;
 }
 
 .horizontal-block-center-bg-yellow {
@@ -1021,6 +1025,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   background-clip: padding-box;
   position: relative;
   z-index: -1;
+  object-fit: cover;
 }
 
 .card .card-image span.card-title {
@@ -1058,7 +1063,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 }
 
 .card .card-action a {
-  color: #ffab40;
+  color: #fff;
   margin-right: 16px;
   transition: color 0.3s ease;
   text-transform: uppercase;
@@ -1153,8 +1158,7 @@ h2.home-info{
     width: 100%;
     float: left;
     img{
-      width: 100%;
-      height: 152px;
+      object-fit: cover;
       border-bottom: 1px solid #777;
     }
   }
