--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
   <div class="best-contributor-display">
     <div class="best-contributor-carousel">
       <div>
-        <div class="best-contributor-photo"><img src="http://www.artlimited.net/user/0/0/1/6/5/1/5/artlimited_img265270.jpg" /></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="http://www.artlimited.net/user/0/0/1/6/5/1/5/artlimited_img265270.jpg" /></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div>
-        <div class="best-contributor-photo"><img src="http://www.fitgirls.nl/uploads/2015/01/Girl-Happy-Face-Wallpaper.jpg" /></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="http://www.fitgirls.nl/uploads/2015/01/Girl-Happy-Face-Wallpaper.jpg" /></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div>
-        <div class="best-contributor-photo"><img src="http://farm3.static.flickr.com/2390/1498191552_239b65279e.jpg?v=0" /></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="http://farm3.static.flickr.com/2390/1498191552_239b65279e.jpg?v=0" /></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div>
-        <div class="best-contributor-photo"><img src="https://az598155.vo.msecnd.net/wp-uploads/2015/05/smiley_face_on_cardboard-4183.jpg" /></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="https://az598155.vo.msecnd.net/wp-uploads/2015/05/smiley_face_on_cardboard-4183.jpg" /></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div>
-        <div class="best-contributor-photo"><img src="http://farm3.static.flickr.com/2390/1498191552_239b65279e.jpg?v=0" /></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="http://farm3.static.flickr.com/2390/1498191552_239b65279e.jpg?v=0" /></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div>
-        <div class="best-contributor-photo"><img src="https://s-media-cache-ak0.pinimg.com/236x/00/63/01/006301373b10a9e88a58b9ff627c7437.jpg"/></div>
+        <div class="best-contributor-photo"><img width="100%" height="152" src="https://s-media-cache-ak0.pinimg.com/236x/00/63/01/006301373b10a9e88a58b9ff627c7437.jpg"/></div>
         <div class="contributor-info">
           <h3>Vu Huy Quan </h3>
           <span class="num-contribution">10 Trips</span>
