fix  croped photo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -721,6 +721,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   width: 280px;
   height: 280px;
   padding: 16px 16px 16px 0;
+  object-fit: cover;
 }
 
 .btn-behind-title {
