--- a/app/views/share/_search.html.erb
+++ b/app/views/share/_search.html.erb
@@ -1,13 +1,13 @@
 <% if params[:controller] == 'home' %>
-        <form class="form-inline home-search">
-          <div class="form-group">
-            <label class="sr-only" for="fromPlace">From</label>
-            <input type="email" class="form-control home-search-box" id="fromPlace" placeholder="Departure">
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="toPlace">Password</label>
-            <input type="password" class="form-control home-search-box" id="toPlace" placeholder="Destination">
-          </div>
-          <button type="submit" class="btn btn-primary">Search</button>
-        </form>
+    <form class="form-inline home-search">
+      <div class="form-group">
+        <label class="sr-only" for="fromPlace">From</label>
+        <input type="email" class="form-control home-search-box" id="fromPlace" placeholder="Departure">
+      </div>
+      <div class="form-group">
+        <label class="sr-only" for="toPlace">Password</label>
+        <input type="password" class="form-control home-search-box" id="toPlace" placeholder="Destination">
+      </div>
+      <button type="submit" class="btn btn-primary" style="height: 48px; font-size: 20px">Search</button>
+    </form>
 <% end %>
