--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,52 +10,61 @@
 </head>
 <body>
 
-<% if params[:controller] == 'home' %>
-    <div class="image-search-home">
-      <div class="container">
+  <% if params[:controller] == 'home' %>
+  <div class="image-search-home">
+    <div class="container">
 
-        <!-- NAV BAR -->
-        <%= render 'share/navbar' %>
+      <!-- NAV BAR -->
+      <%= render 'share/navbar' %>
 
-        <!-- CREATE ACTION -->
-        <div class="header text-center">
-          <h1>WE TRIP</h1>
-          <h2>Travel in your way</h2>
-          <button type="button" class="btn" id="createTripBtn" data-toggle="modal" data-target="#trip-form">
-            Create a trip
-          </button>
-        </div>
-      </div>
-
-      <!-- SEARCH ACTION -->
-      <div class="main-search text-center">
-        <%= render 'share/search' %>
+      <!-- CREATE ACTION -->
+      <div class="header text-center">
+        <h1>WE TRIP</h1>
+        <h2>Travel in your way</h2>
+        <button type="button" class="btn" id="createTripBtn" data-toggle="modal" data-target="#trip-form">
+          Create a trip
+        </button>
       </div>
     </div>
 
-    <!-- MAIN ACTION -->
-    <%= yield %>
-<% else %>
+    <!-- SEARCH ACTION -->
+    <div class="main-search text-center">
+      <%= render 'share/search' %>
+    </div>
+  </div>
 
-    <!-- HEADER VIEW -->
-    <div class="trip-top-header">
-      <div class="container">
-        <a href="<%= root_path %>">
-          <h1>WE TRIP</h1>
-          <span class="slogan">Travel in your way</span>
-        </a>
-        <div class="top-right-trip">
-          <%= render 'share/login_user_menu' %>
+  <!-- MAIN ACTION -->
+  <%= yield %>
+  <% else %>
+
+  <!-- HEADER VIEW -->
+  <div class="trip-top-header">
+    <div class="container">
+      <a href="<%= root_path %>">
+        <h1>WE TRIP</h1>
+        <span class="slogan">Travel in your way</span>
+      </a>
+      <div class="top-right-trip">
+        <% if sign_in? %>
+        <%= render 'share/login_user_menu' %>
+        <% else %>
+        <div class="top-before-login text-right" style="margin-top: 8px">
+          <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
+          <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
         </div>
+        <%= render 'sessions/new' %>
+        <%= render 'users/new' %>
+        <% end %>
       </div>
     </div>
+  </div>
 
-    <%= yield %>
-    <% if params[:controller] == 'trips' && params[:action] == 'edit' %>
-        <!-- LOADING VIEW -->
-        <%= render 'share/loading' %>
-    <% end %>
-<% end %>
+  <%= yield %>
+  <% if params[:controller] == 'trips' && params[:action] == 'edit' %>
+  <!-- LOADING VIEW -->
+  <%= render 'share/loading' %>
+  <% end %>
+  <% end %>
 
 </body>
 </html>
