--- a/app/views/searchs/index.html.erb
+++ b/app/views/searchs/index.html.erb
@@ -1,20 +1,15 @@
-<% if !params[:destination].blank? %>
-<h1>Trips from <%= params[:departure] %> to <%= params[:destination] %></h1>
-<% else %>
-<h1>Trips from <%= params[:departure] %></h1>
-<% end %>
-
+<h1 style="margin: auto; text-align:center">Trips search result!!!</h1>
 <% if !@trips.blank? %>
-<div class="horizontal-block-center">
-  <div class="trip-list horizontal-block-center-bg-yellow">
-    <div class="container">
-      <div class="row">
-        <%= render partial: 'trips/trip_summary', collection: @trips, as: :trip %>
+    <div class="horizontal-block-center">
+      <div class="trip-list horizontal-block-center-bg-yellow">
+        <div class="container">
+          <div class="row">
+            <%= render partial: 'trips/trip_summary', collection: @trips, as: :trip %>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 <% else %>
-<h3>No Trips match your search</h3>
-<%= link_to "Back to homepage", root_path %>
+    <h3>No Trips match your search</h3>
+    <%= link_to "Back to homepage", root_path %>
 <% end %>
